manifests/hostpath.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
  - name: hostpath
    image: busybox:latest
    command:
      - sleep
      - "86400"
    imagePullPolicy: IfNotPresent
    volumeMounts:
      - name: rootfs
        mountPath: /rootfs
  restartPolicy: Always
  volumes:
    - name: rootfs
      hostPath:
        path: /
